[package]
name = "weibo_hide"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "cookies", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
indicatif = "0.17"
